[package]
name = "nzmistella-space-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_backend_lib"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace", "std"] }
async-trait = "0.1.80"
axum = "0.7.5"
base64 = "0.22.0"
chrono = "0.4.37"
config = "0.14.0"
deadpool-redis = "0.15.1"
garde = { version = "0.18.0", features = ["derive", "regex", "email", "url"] }
http = "1.1.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
regex = "1.10.4"
ring = { version = "0.17.8", features = ["std"] }
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-time", "sqlx-postgres"] }
sea-query = "0.30.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "mysql"] }  # Solving the Time Zone Issue in Databases
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["macros"] }
